Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54075

QML styled text poorly positions images

    XMLWordPrintable

Details

    • 6358e1365539d2ea26ec20617b58c0fed11d647e

    Description

      The following example can be used to demonstrate the issue:

      import QtQuick 2.0
      
      Item {
          width: 200
          height: 100
      
          Text {
              anchors.centerIn: parent
              font.pixelSize: 26
              font.family: "Arial"
              textFormat: Text.StyledText
              text: qsTr("the %1 icon").arg("<img src='img.png' align='bottom' width='28' height='28'>")
          }
      }
      

      See attached images for current output and expected output

      Attachments

        1. english.png
          english.png
          6 kB
        2. english-expected.png
          english-expected.png
          6 kB
        3. hebrew.png
          hebrew.png
          6 kB
        4. hebrew-expected.png
          hebrew-expected.png
          6 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mbrasser Michael Brasser
            mbrasser Michael Brasser
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes