Fix positioning of inline images in StyledText.

Fix horizontal positioning generally, and also address RTL specifically.

Change-Id: I8b75c11bc38e39da5cda302ee9b475bf0dc464e8
Task-number: QTBUG-54075
Reviewed-by: Andrew den Exter <andrew.den.exter@qinetic.com.au>